{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 12,
  "lineage": "52fb0501-3fcb-f56e-20d1-78a099b21102",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:704668525902:instance/i-067fbc8ab8030a9e8",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067fbc8ab8030a9e8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f6dd74dbe07a7411",
            "private_dns": "ip-192-168-1-233.ap-south-1.compute.internal",
            "private_ip": "192.168.1.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-011ae906ba6ba5516",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b96842635822f5c4",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bf4a1aca0ce3a4b5"
            ]
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_security_group.web",
            "aws_subnet.private-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:704668525902:instance/i-0a2eb4adb11b411b0",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2eb4adb11b411b0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00caed6e77906a1a6",
            "private_dns": "ip-192-168-0-164.ap-south-1.compute.internal",
            "private_ip": "192.168.0.164",
            "public_dns": "ec2-13-127-36-65.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.36.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c77bf07a59df2fcd",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086e3d07827008241",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081e42358f49d9fd8"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f5a5775ee6dff64b",
            "owner_id": "704668525902",
            "tags": {
              "Name": "My-internet-gateway"
            },
            "vpc_id": "vpc-013a12ad8cfddac7b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b149051120499aaa",
            "owner_id": "704668525902",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5a5775ee6dff64b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-routing-table"
            },
            "vpc_id": "vpc-013a12ad8cfddac7b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028d501219c19f96c",
            "route_table_id": "rtb-0b149051120499aaa",
            "subnet_id": "subnet-086e3d07827008241"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_subnet.public-subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704668525902:security-group/sg-0bf4a1aca0ce3a4b5",
            "description": "Allow webserver-SG inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf4a1aca0ce3a4b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081e42358f49d9fd8"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-SG",
            "name_prefix": null,
            "owner_id": "704668525902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a12ad8cfddac7b"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704668525902:security-group/sg-081e42358f49d9fd8",
            "description": "Allow HTTP and SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081e42358f49d9fd8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wordpress-SG",
            "name_prefix": null,
            "owner_id": "704668525902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-013a12ad8cfddac7b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704668525902:subnet/subnet-0b96842635822f5c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0b96842635822f5c4",
            "map_public_ip_on_launch": false,
            "owner_id": "704668525902",
            "tags": {
              "Name": "private-subnet-1b"
            },
            "vpc_id": "vpc-013a12ad8cfddac7b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704668525902:subnet/subnet-086e3d07827008241",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-086e3d07827008241",
            "map_public_ip_on_launch": true,
            "owner_id": "704668525902",
            "tags": {
              "Name": "public-subnet-1a"
            },
            "vpc_id": "vpc-013a12ad8cfddac7b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704668525902:vpc/vpc-013a12ad8cfddac7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05f476b203b57356b",
            "default_route_table_id": "rtb-0950c737534d49c10",
            "default_security_group_id": "sg-03e96edfde5b59e02",
            "dhcp_options_id": "dopt-0ac6d712c7acb90fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-013a12ad8cfddac7b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0950c737534d49c10",
            "owner_id": "704668525902",
            "tags": {
              "Name": "amol-vpc"
            }
          }
        }
      ]
    }
  ]
}